tests/reject/bad_array_ref_2.ul
void main() {
  int[2] x;
  x[2.3];
}
